--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <p ><h1> About Me</h1></p>
             <nav>
                 <ul>
-                    <li><span><a class="active" href="/myhome.html">Home</a></span></li>
+                    <li><span><a class="active" href="/index.html">Home</a></span></li>
                     <li><span><a href="/gallery.html">Gallery</a></span></li>
                     <li><span><a href="/contact.html">Contact</a></span></li>
                     <li><span><a href="/about.html">About</a></span></li>
