--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>gallery</title>
-        <link rel="stylesheet" href="gallery-style.css">
+        <link rel="stylesheet" href="/css/gallery-style.css">
         <link href="https://fonts.googleapis.com/css?family=Bungee Shade" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Sofia"  rel="stylesheet">  
