--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>gallery</title>
-        <link rel="stylesheet" href="/css/gallery-style.css">
+        <title>Gallery</title>
+        <link rel="stylesheet" href="gallery-style.css">
         <link href="https://fonts.googleapis.com/css?family=Bungee Shade" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Sofia"  rel="stylesheet">  
@@ -14,7 +14,7 @@
             <p ><h1> Fazil's Gallery</h1></p>
             <nav>
                 <ul>
-                    <li><span><a class="active" href="/index.html">Home</a></span></li>
+                    <li><span><a class="active" href="/myhome.html">Home</a></span></li>
                     <li><span><a href="/gallery.html">Gallery</a></span></li>
                     <li><span><a href="/contact.html">Contact</a></span></li>
                     <li><span><a href="/about.html">About</a></span></li>
@@ -26,16 +26,16 @@
         <div class="main">
             
             <div class="container">
-                <div class="box1"><img src="/images/8.jpg" alt="" height="400px" width="570px"></div>
-                <div class="box2"><img src="/images/6.jpg" alt="" height="600px" width="570px"></div>
-                <div class="box3"><img src="/images/4.jpg" alt="" height="400px" width="570px"></div>
-                <div class="box4"><img src="/images/5.jpg" alt="" height="300px" width="570px"></div>
-                <div class="box5"><img src="/images/2.jpg" alt="" height="400px" width="570px"></div>
-                <div class="box6"><img src="/images/3.jpg" alt="" height="590px" width="570px"></div>
-                <div class="box7"><img src="/images/10.jpg" alt="" height="600px" width="570px"></div>
-                <div class="box8"><img src="/images/12.jpg" alt="" height="308px" width="1160px"></div>
-                <div class="box9"><img src="/images/box3.jpg" alt="" height="307px" width="1160px"></div>
-                <div class="box10"><img src="/images/9.jpg" alt="" height="310px" width="570px"></div>
+                <div class="box1"><img src="/images/8.jpg" alt="" height="400px" width="450px"></div>
+                <div class="box2"><img src="/images/6.jpg" alt="" height="600px" width="450px"></div>
+                <div class="box3"><img src="/images/4.jpg" alt="" height="400px" width="450px"></div>
+                <div class="box4"><img src="/images/5.jpg" alt="" height="300px" width="450px"></div>
+                <div class="box5"><img src="/images/2.jpg" alt="" height="400px" width="450px"></div>
+                <div class="box6"><img src="/images/3.jpg" alt="" height="590px" width="450px"></div>
+                <div class="box7"><img src="/images/10.jpg" alt="" height="600px" width="450px"></div>
+                <div class="box8"><img src="/images/12.jpg" alt="" height="308px" width="933px"></div>
+                <div class="box9"><img src="/images/box3.jpg" alt="" height="307px" width="920px"></div>
+                <div class="box10"><img src="/images/9.jpg" alt="" height="310px" width="450px"></div>
 
             </div>
 
