--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Gallery</title>
-        <link rel="stylesheet" href="gallery-style.css">
+        <link rel="stylesheet" href="/css/gallery-style.css">
         <link href="https://fonts.googleapis.com/css?family=Bungee Shade" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Sofia"  rel="stylesheet">  
@@ -14,7 +14,7 @@
             <p ><h1> Fazil's Gallery</h1></p>
             <nav>
                 <ul>
-                    <li><span><a class="active" href="/myhome.html">Home</a></span></li>
+                    <li><span><a class="active" href="/index.html">Home</a></span></li>
                     <li><span><a href="/gallery.html">Gallery</a></span></li>
                     <li><span><a href="/contact.html">Contact</a></span></li>
                     <li><span><a href="/about.html">About</a></span></li>
